--- a/temperatureconverting.css
+++ b/temperatureconverting.css
@@ -9,19 +9,19 @@ h1{
 form{
     background-color: white;
     text-align: center;
-    max-width: 350px;
+    max-width: 1050px;
     margin: auto;
-    padding: 25px;
+    padding: 97px;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px red;
 }
 label{
-    background-color: rgb(212, 164, 164);
-    font-size: 19px;
+    height: 100px;
+    width: 100px;
+    font-size: 39px;
     font-weight: 500;
 }
 #textBox{
-    width: 50%;
+    width: 100%;
     text-align: center;
     font-size: 2em;
     border: 2px solid black;
@@ -30,11 +30,13 @@ label{
 
 }
 button{
+    height: 50px;
+    width: 130px;
     background-color: white;
     border-radius: 100px;
-    padding: 5px;
+    padding: 15px;
     font-size: 1em;
-    font-weight: 600;
+    font-weight: 700;
     border-color: brown;
     cursor: pointer;
 }
@@ -43,6 +45,6 @@ button:hover{
 }
 
 #result{
-    font-size: 1.75em;
-    font-weight: 600;
+    font-size: 2.75em;
+    font-weight: 700;
 }
